--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="/public/css/bootstrap.min.css" />
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root">
+      THIS IS A TEST
+      <button type="button" class="btn btn-primary">THIS BUTTON DOES NOTHING</button>
+    </div>
   </body>
 </html>
