--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <div id="root">
-      THIS IS A TEST
-      <button type="button" class="btn btn-primary">THIS BUTTON DOES NOTHING</button>
+      <script type="module" src="/src/main.tsx"></script> 
     </div>
   </body>
 </html>
